sprucing up Getting Started page

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,20 +10,19 @@ import Link from '@docusaurus/Link';
 
 ## Introduction
 
-Building an extra decentralized web that puts you in control of your data and identity.
+We're building a decentralized web that puts you in control of your data and identity. [Web5](https://developer.tbd.website/blog/what-is-web5) brings decentralized identity and data storage to your applications. It lets developers focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-The web democratized the exchange of information, but it's missing a key layer: identity. We struggle to secure personal data with hundreds of accounts and passwords we can’t remember. On the web today, identity and personal data have become the property of third parties.
 
-Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
-
+<Card>
 <Link href="https://github.com/TBD54566975">
   <div className="flex items-center">
-    <span>https://github.com/TBD54566975</span>
+    <span>GitHub Repo</span>
     <span style={{ marginLeft: '12px' }}>
       <img src="/img/github-icon.svg" alt="github" width="20" height="20" />
     </span>
   </div>
 </Link>
+</Card>
 
 ### Platform Components
 
@@ -36,12 +35,12 @@ Web5 brings decentralized identity and data storage to your applications. It let
 <ApiCard
   url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk
 "
-  name="SSI SDK - Go Docs"
+  name="SSI SDK"
 />
   <ApiCard
     url="https://tbd54566975.github.io/dwn-sdk-js/
 "
-    name="DWN JavaScript SDK"
+    name="DWN SDK"
   />
 </div>
 
@@ -69,18 +68,42 @@ Web5 brings decentralized identity and data storage to your applications. It let
 
 <div className="grid grid-cols-2 gap-4">
 <Card>
-  <p>To-Do App</p>
-
-  <Link href="https://github.com/TBD54566975/incubating-web5-labs/tree/main/todo-app">
-  Tutorial >
+ <Link href="https://github.com/TBD54566975/incubating-web5-labs/tree/main/todo-app">
+  Todo App
   </Link>
+  <p>
+  A good single user starting point for a "hello world" style app. Stores your todos in your Decentralized Web Node.
+  </p>
 </Card>
 
 <Card>
-  <p>Chat App (coming soon)</p>
+ <Link href="https://github.com/TBD54566975/incubating-web5-labs/tree/main/chat-app">
+  Chat App
+  </Link>
+  <p>
+  A more complex app that shows network style interaction and communication with other people via their Decentralized Identifiers.
+  </p>
 </Card>
 </div>
 
 ### Community Tutorials
 
-- Getting started with TBD's SSI Service: https://frankhinek.com/getting-started-with-tbds-ssi-service/
+<div className="grid grid-cols-2 gap-4">
+  <Card>
+    <Link href="https://frankhinek.com/getting-started-with-tbds-ssi-service/">
+      Getting Started with TBD's SSI Service
+      </Link>
+  </Card>
+  <Card>
+    <Link href="https://youtu.be/e45kwUxuF3E">
+      Web 5 Explained in Simple Terms
+      </Link>
+  </Card>
+  <Card>
+    <Link href="https://youtu.be/ilhxlFUOSzk">
+      Web5 Explained... By a Bitcoin Maximalist
+      </Link>
+  </Card>  
+
+  
+</div>
