--- a/docs/tutorials/issue-verifiable-credential-manually.mdx
+++ b/docs/tutorials/issue-verifiable-credential-manually.mdx
@@ -352,7 +352,7 @@ The following response should be returned:
 
 <blockquote>
   Note: the value for <b>credentialJwt</b> can be decoded using a tool like{' '}
-  <a href="jwt.io">
+  <a href="https://jwt.io/">
     <b>jwt.io</b>
   </a>
   .
