--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-import ApiCardfrom from '@site/src/components/ApiCard';
+import ApiCard from '@site/src/components/ApiCard';
 import Card from '@site/src/components/Card';
 import Link from '@docusaurus/Link';
 
