--- a/old/docs/intro.mdx
+++ b/old/docs/intro.mdx
@@ -2,8 +2,8 @@
 sidebar_position: 1
 ---
 
-import { ApiCard } from '@site/src/components/ApiCard';
-import { Card } from '@site/src/components/Card';
+import ApiCard from '@site/src/components/ApiCard';
+import Card from '@site/src/components/Card';
 import Link from '@docusaurus/Link';
 
 # Getting Started
