adjusted open-source page

--- a/src/content/open-source/governance.mdx
+++ b/src/content/open-source/governance.mdx
@@ -4,8 +4,12 @@ hide_table_of_contents: true
 
 import { content } from '@site/src/content/open-source/open-source';
 
-# Governance
+<h1>Governance</h1>
+
+<p className="text-primary-yellow text-[18px] mt-6 mb-6">
 
 Great work is built by great people with great relationships. Our governance model protects the community from behavior that doesn’t reflect our values.
+
+</p>
 
 <ButtonGroup buttons={content.buttons} />
