--- a/src/content/open-source/heading.mdx
+++ b/src/content/open-source/heading.mdx
@@ -1,5 +1,18 @@
-# Today’s financial systems leave people behind. We build systems for anyone with internet access. And we’re creating it like the web itself: as a public good.
+<h1 className="mb-12">
+  Today’s financial systems leave people behind. We build systems for anyone
+  with internet access. And we’re creating it like the web itself: as a public
+  good.
+</h1>
 
-Our projects are open source and, where appropriate, built on open standards.
+<p className="text-primary-yellow text-[18px] mb-6">
+  Our projects are open source and, where appropriate, built on open standards.
+</p>
 
-Our work is licensed under the Apache License 2.0, and we welcome you to join us in building the future of finance and <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> technology.
+<p className="text-primary-yellow text-[18px] mt-6 mb-6">
+  Our work is licensed under the Apache License 2.0, and we welcome you to join
+  us in building the future of finance and{' '}
+  <TooltipWrapper trigger="decentralized">
+    a network that is not controlled by a central entity
+  </TooltipWrapper>{' '}
+  technology.
+</p>
