adjusting button classes and adding "prose" styles

--- a/src/content/projects/project-index/project-list.mdx
+++ b/src/content/projects/project-index/project-list.mdx
@@ -1,5 +1,5 @@
 import { content } from '@site/src/content/projects/project-index/projects';
 
-## List of Projects
+<h2 className="text-2xl text-[1.5rem] mb-12">List of Projects</h2>
 
 <ProjectList projects={content.projects} growToFit={false} title="" />
