--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -26,7 +26,7 @@ import { content } from '@site/src/content/projects/project-index/projects';
 
 <content.ListOfProjects />
 
----
+<Divider />
 
 </div>
 
