--- a/src/content/projects/project-index/column-1.mdx
+++ b/src/content/projects/project-index/column-1.mdx
@@ -1,3 +1,5 @@
-# All projects in the TBD family are in early prototyping.
+<h1 className="h1 text-primary-yellow mb-12">
+  All projects in the TBD family are in early prototyping.
+</h1>
 
 ## New contributors should expect a pace of development consistent with nascent technology: larger commits, frequent refactoring, changing APIs, and incomplete feature sets.
