--- a/src/content/projects/project-index/column-1.mdx
+++ b/src/content/projects/project-index/column-1.mdx
@@ -2,4 +2,8 @@
   All projects in the TBD family are in early prototyping.
 </h1>
 
-## New contributors should expect a pace of development consistent with nascent technology: larger commits, frequent refactoring, changing APIs, and incomplete feature sets.
+<h2 className="text-4xl">
+  New contributors should expect a pace of development consistent with nascent
+  technology: larger commits, frequent refactoring, changing APIs, and
+  incomplete feature sets.
+</h2>
