--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -8,7 +8,10 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper> and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-<div className="mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
+<div
+  style={{ marginTop: '3.25rem', marginBottom: '6rem' }}
+  className="mx-11 tablet:mx-16 desktop:mx-24 mt-7 desktop:mt-14"
+>
   <SwitchIllustration {...content.web5Illustrations} />
 </div>
 
