--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,27 +1,18 @@
 ---
 sidebar_position: 1
+title: Home
+hide_title: true
+hide_table_of_contents: true
 ---
 
 import ApiCard from '@site/src/components/ApiCard';
 import Card from '@site/src/components/Card';
 import Link from '@docusaurus/Link';
+import DocsIndexPage from './docs-index'
 
-# Getting Started
 
-## Introduction
+<DocsIndexPage />
 
-We're building a decentralized web that puts you in control of your data and identity. [Web5](https://developer.tbd.website/blog/what-is-web5) brings decentralized identity and data storage to your applications. It lets developers focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
-
-<Card>
-  <Link href="https://github.com/TBD54566975">
-    <div className="flex items-center">
-      <span>GitHub Repo</span>
-      <span style={{ marginLeft: '12px' }}>
-        <img src="/img/github-icon.svg" alt="github" width="20" height="20" />
-      </span>
-    </div>
-  </Link>
-</Card>
 
 ### Platform Components
 
