--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -1,19 +1,12 @@
 import { content } from '@site/src/content/projects/web5/web5.js';
 
-# WEB5: AN EXTRA DECENTRALIZED WEB PLATFORM
-
 ## Building an extra decentralized web that puts you in control of your data and identity
 
 The web democratized the exchange of information, but it's missing a key layer: identity. We struggle to secure personal data with hundreds of accounts and passwords we can’t remember. On the web today, identity and personal data have become the property of third parties.
 
 Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper> and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-<div
-  style={{ marginTop: '3.25rem', marginBottom: '6rem' }}
-  className="mx-11 tablet:mx-16 desktop:mx-24 mt-7 desktop:mt-14"
->
-  <SwitchIllustration {...content.web5Illustrations} />
-</div>
+The Web5 JS Library helps you create a Web5 app in minutes, or bring in Web5 functionality into your existing app.
 
 <ButtonGroup
   className="pt-24"
@@ -21,28 +14,40 @@ Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, o
     {
       type: 'button',
       data: {
-        label: 'Getting Started',
-        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_WEB5.md',
-        isExternalLink: true,
-        imageURL: '/img/external-link-blue-icon.svg',
+        label: 'Quickstart',
+        url: '/docs/intro',
       },
     },
     {
       type: 'button',
       data: {
-        label: 'Chat',
+        label: 'Learn Web5',
+        url: '', // TODO
+      }
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Build Web5',
+        url: '', // TODO
+      }
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Contribute',
+        url: 'https://github.com/TBD54566975/tbd-project-template/blob/main/CONTRIBUTING.md',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
+      }
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Join Discord',
         url: 'https://discord.gg/tbd',
         isExternalLink: true,
         imageURL: '/img/external-link-blue-icon.svg',
-      },
-    },
-    {
-      type: 'button',
-      data: {
-        label: 'PDF',
-        url: '/docs/Decentralized Web Platform - Public.pdf',
-        isExternalLink: true,
-        imageURL: '/img/download-icon.svg',
       },
     },
   ]}
