Fix quickstart link

--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -15,7 +15,7 @@ The Web5 JS Library helps you create a Web5 app in minutes, or bring in Web5 fun
       type: 'button',
       data: {
         label: 'Quickstart',
-        url: '/docs/intro',
+        url: '/docs/web5/quickstart/',
       },
     },
     {
