--- a/src/content/projects/ssi-service.mdx
+++ b/src/content/projects/ssi-service.mdx
@@ -2,4 +2,4 @@
 hide_table_of_contents: true
 ---
 
-Standards-based primitives for using <TooltipWrapper trigger="Decentralized Identifiers"> identity created, owned, and controlled by individuals, without reliance on centralized entities </TooltipWrapper> and <TooltipWrapper trigger="Verifiable Credentials">digital certificates that make it easy to share information online in a private and secure way</TooltipWrapper>.
+Standards-based primitives for using <TooltipWrapper trigger="Decentralized Identifiers"> identity created, owned, and controlled by individuals, without reliance on centralized entities </TooltipWrapper> and <TooltipWrapper trigger="Verifiable Credentials">digital certificates that make it easy to share information online in a private and secure way</TooltipWrapper>
