--- a/docs/web5/index.mdx
+++ b/docs/web5/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: WEB5 - AN EXTRA DECENTRALIZED WEB PLATFORM
+title: WEB5 SDK
 hide_table_of_contents: true
 ---
 
@@ -23,7 +23,38 @@ import { content } from '@site/src/content/projects/web5/web5.js';
 
 <div className="prose prose-pink">
 
-<content.Heading />
+## A decentralized web platform that puts you in control of your data and identity.
+
+The web democratized the exchange of information, but it's missing a key layer: identity. We struggle to secure personal data with hundreds of accounts and passwords we can’t remember. On the web today, identity and personal data have become the property of third parties.
+
+Web5 brings [decentralized identity](learn/decentralized-identifiers) and [data storage](learn/decentralized-web-nodes) to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
+
+The Web5 SDK helps you create a decentralized app in minutes.
+
+
+<ButtonGroup
+  className="pt-12"
+  buttons={[
+    {
+      type: 'button',
+      data: {
+        label: 'Quickstart',
+        url: 'quickstart',
+        isExternalLink: false,
+        imageURL: '/img/external-link-blue-icon.svg',
+      },
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Contribute',
+        url: 'https://github.com/TBD54566975/web5-js',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
+      },
+    },
+  ]}
+/>
 
 <Divider type="slash" />
 
