update meta tags in web5 index

--- a/docs/web5/index.mdx
+++ b/docs/web5/index.mdx
@@ -8,17 +8,11 @@ import { content } from '@site/src/content/projects/web5/web5.js';
 
 <head>
   <title>{content.meta.title}</title>
-  <meta property="og:description" content={metacontent.description} />
-  <meta name="description" content={metacontent.description} />
-  <meta property="og:title" content={content.meta.title} />
-  <meta
-    property="og:url"
-    content={'https://developer.tbd.website/' + content.meta.path}
-  />
-  <link
-    rel="apple-touch-icon"
-    href="https://developer.tbd.website/img/tbd-fav-icon-main.png"
-  />
+  <meta property="og:description" content="Documentation on Web5 SDK" />
+  <meta name="description" content="Documentation on Web5 SDK" />
+  <meta property="og:title" content="WEB5 SDK" />
+  <meta property="og:url" content="/docs/web5"/>
+  <link rel="apple-touch-icon" href="https://developer.tbd.website/img/tbd-fav-icon-main.png"/>
 </head>
 
 <div className="prose prose-pink">
