First stan at putting markdown from quickstart into partials

--- a/docs/web5/quickstart.mdx
+++ b/docs/web5/quickstart.mdx
@@ -1,234 +1,10 @@
-# Quickstart Web5
-
-## Web5 in 5️⃣ minutes
-
-We’re going to build a decentralized application on the Web5 platform - in under 5 minutes.
-
-We’ll show you how to use features like messaging, reading, and writing to your personal data store. (do we need this sentence?)
-
-Let’s go! 🚀
-
-:::danger
-
-This QuickStart is noted with lots of NOTES
-
-...where appropriate, specifically referencing widgets that Devin has created. Those
-are [runnable here](https://moonlit-centaur-0d7b4f.netlify.app/), in 
-[this repo](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html)
-temporarily, until we can slice them into React components and embed them within this page context here.
-When done, they'll be the interactive portion of the code we show as we go, walking the user through 
-what they're doing (prose), how (code), and what it may look like (runnable widgets) all on the page.
-
-:::
-
-# Prerequisites
-
-[Node Package Manager - NPM](https://docs.npmjs.com/downloading-and-installing-node-js-and-npm)
-Used to obtain the Web5 SDK, a JavaScript library
-
-## Installation
-This will install the Web5 module into your project using NPM. From the shell:
-```
-$> npm install @tbd54566975/web5
-```
-
-<details><summary>Without NPM</summary>
-<p>
-
-#### Using CDN directly
-
-You may also reference the Web5 JS SDK library directly from the CDN. This may be preferable for projects not using a package management system or build.
-
-```html
-<script src="
-https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/browser.min.js
-"></script>
-```
-
-</p>
-</details>
-
-# Quickstart
-
-1. Import the Web5 API into your application:
-
-```
-import { Web5 } from '@tbd54566975/web5'
-```
-
-
-<details><summary>Without NPM</summary>
-<p>
-
-#### Using CDN directly
-
-If not using NPM, you may import the `Web5` class from the library directly on the CDN.
-
-```JavaScript
-import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/browser.min.js'
-```
-
-</p>
-</details>
-
-2. Create Web5 instance:
-
-There’s only one class for all Web5 operations
-
-```
-const web5 = new Web5
-```
-
-3. Create a Decentralized Identifier (DID):
-
-In the world of Web5, your unique identifier, like an email address, is called a DID.
-
-<details><summary>About DIDs.</summary>
-<p>
-
-:::caution
-
-ADD LINK to DID page here
-
-:::
-
-</p>
-</details>
-
-```
-let did = await web5.did.create('ion');
-```
-
-
-:::caution
-
-*ALR Note 7 April 2023*: Follow to see if this is still going to be required; we may be moving 
-into a [no-arg constructor default](https://github.com/TBD54566975/web5-js/issues/31)
-
-:::
-
-Play with creating DIDs here:
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-4. Register your DID:
-
-Registering your DID gives others a way to find you, message you, and send you data (provided they have permissions).
-
-```
-await web5.did.register({
-    connected: true,
-    did: did.id,
-    endpoint: 'app://dwn',
-    keys: did.keys[0].keypair,
-});
-```
-
-Register your DID from step one here:
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-5. Now you’re able to write / store your data in a Decentralized Web Node (DWN):
-
-The DWN is your personal data store - a home for messages, pictures, videos, and more. It’s how you retain ownership over your information. Later on you’ll have the opportunity to replicate it for redundancy. It can be hosted by others, but because the private information in your DWN is encrypted with your key - you’re in charge, and all your information is secure.
-
-```
-const data = 'Hello Web5';
-console.log('write data', data);
-
-let writeResult = await web5.dwn.records.write(did.id, {
-    author: did.id,
-    data,
-    message: {
-        schema: 'test',
-        dataFormat: 'text/plain',
-    },
-});
-console.log('write result', writeResult);
-```
-
-Practice writing something:
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-6. Query
-
-Here’s how you’re able to query anything you've saved in your DWN.
-
-:note: The dataFormat value isn’t limited to image/png; it can be any MIME type.
-
-```
-let queryResult = await
-    web5.dwn.records.query(did.id, {
-        author: did.id,
-        message: {
-            filter: {
-            schema: 'test',
-        },
-    },
-});
-console.log('query result', queryResult);
-```
-
-Now let's find some information about the data you just wrote:
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-7. Reading your messages in DWN
-
-```
-let readResult = await web5.dwn.records.read(did.id, {
-    author: did.id,
-    message: {
-        recordId: queryResult.entries[0].recordId,
-    },
-});
-console.log('read result', readResult);
-console.log('read data',
-web5.dwn.SDK.Encoder.bytesToString(await web5.dwn.SDK.DataStream.toBytes(readResult.data)));
-```
-
-Now let's get the actual data for the information we just got (edit this sentence):
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-8. Deleting messages in your DWN
-
-let deleteResult = await web5.dwn.records.delete(did.id, {
-    author: did.id,
-    message: {
-        recordId: queryResult.entries[0].recordId,
-    },
-});
-console.log('delete result', deleteResult);
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
-Next Steps:
-1. Learn more about DIDs (link to DID page)
-2. Build your first ToDo app (link coming soon)
-3. Learn what to do with a DID externally(linked in build>DID>how-to-use-externa..)
+---
+sidebar_position: 1
+title: Web5 QuickStart
+hide_title: true
+hide_table_of_contents: true
+---
+
+import Web5Quickstart from './quickstart'
+
+<Web5Quickstart />
