fixing 404 on web5 pdf

--- a/src/content/projects/web5/heading.mdx
+++ b/src/content/projects/web5/heading.mdx
@@ -40,7 +40,7 @@ Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, o
       type: 'button',
       data: {
         label: 'PDF',
-        url: '/docs/Decentralized Web Platform - Public.pdf',
+        url: '/files/Decentralized-Web-Platform.pdf',
         isExternalLink: true,
         imageURL: '/img/download-icon.svg',
       },
