cleaning up spacing, styling and steps

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,4 +1,4 @@
-## Quickstart
+## 1. Quickstart
 
 1. Import the Web5 API into your application:
 
@@ -20,7 +20,7 @@ import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/
 </p>
 </details>
 
-2. Create Web5 instance:
+## 2. Create Web5 instance:
 
 There’s only one class for all Web5 operations
 
@@ -28,7 +28,7 @@ There’s only one class for all Web5 operations
 const web5 = new Web5
 ```
 
-3. Create a Decentralized Identifier (DID):
+## 3. Create a Decentralized Identifier (DID):
 
 In the world of Web5, your unique identifier, like an email address, is called a DID.
 
