--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -1,4 +1,4 @@
-4. Register your DID:
+## 4. Register your DID:
 
 Registering your DID gives others a way to find you, message you, and send you data (provided they have permissions).
 
