--- a/docs/web5/_quickstart-06-query-record.mdx
+++ b/docs/web5/_quickstart-06-query-record.mdx
@@ -1,4 +1,4 @@
-6. Query
+## 6. Query
 
 Here’s how you’re able to query anything you've saved in your DWN.
 
@@ -18,9 +18,3 @@ console.log('query result', queryResult);
 ```
 
 Now let's find some information about the data you just wrote:
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
