--- a/docs/web5/_quickstart-07-read-record.mdx
+++ b/docs/web5/_quickstart-07-read-record.mdx
@@ -1,4 +1,4 @@
-7. Reading your messages in DWN
+## 7. Reading your messages in DWN
 
 ```js
 let readResult = await web5.dwn.records.read(did.id, {
@@ -13,9 +13,3 @@ web5.dwn.SDK.Encoder.bytesToString(await web5.dwn.SDK.DataStream.toBytes(readRes
 ```
 
 Now let's get the actual data for the information we just got (edit this sentence):
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
