--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,4 +1,4 @@
-8. Deleting messages in your DWN
+## 8. Deleting messages in your DWN
 
 ```js
 let deleteResult = await web5.dwn.records.delete(did.id, {
@@ -9,13 +9,6 @@ recordId: queryResult.entries[0].recordId,
 });
 console.log('delete result', deleteResult);
 ```
-
-:::caution
-
-[ADD DEVIN’S WIDGET]
-
-:::
-
 Next Steps:
 
 1. Learn more about DIDs (link to DID page)
