--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,25 +1,3 @@
-## 1. Quickstart
-
-1. Import the Web5 API into your application:
-
-```
-import { Web5 } from '@tbd54566975/web5'
-```
-
-<details><summary>Without NPM</summary>
-<p>
-
-#### Using CDN directly
-
-If not using NPM, you may import the `Web5` class from the library directly on the CDN.
-
-```JavaScript
-import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/browser.min.js'
-```
-
-</p>
-</details>
-
 ## 2. Create Web5 instance:
 
 There’s only one class for all Web5 operations
@@ -32,28 +10,19 @@ const web5 = new Web5
 
 In the world of Web5, your unique identifier, like an email address, is called a DID.
 
-<details><summary>About DIDs.</summary>
-<p>
-
-:::caution
-
-ADD LINK to DID page here
-
+:::info
+A [Decentralized Identifier (DID)](https://www.w3.org/TR/did-core/),
+is an W3C specification for an address representing who you are on the decentralized web. You 
+can [learn more about them here](/docs/web5/learn/decentralized-identifiers) as 
+a core concept behind Web5.
 :::
 
-</p>
-</details>
+We can create a DID using the Web5 API:
 
 ```js
 let did = await web5.did.create('ion');
 ```
 
-
-:::caution
-
-*ALR Note 7 April 2023*: Follow to see if this is still going to be required; we may be moving 
-into a [no-arg constructor default](https://github.com/TBD54566975/web5-js/issues/31)
-
-:::
+This creates a new DID using the `ion` [method name](/docs/glossary#did-method---ion).
 
 Play with creating DIDs here:
