--- a/docs/web5/_quickstart-06-query-record.mdx
+++ b/docs/web5/_quickstart-06-query-record.mdx
@@ -1,8 +1,6 @@
 ## 6. Query
 
-Here’s how you’re able to query anything you've saved in your DWN.
-
-:note: The dataFormat value isn’t limited to image/png; it can be any MIME type.
+Here’s how you’re able to query anything that was saved in your DWN.
 
 ```js
 let queryResult = await
@@ -14,7 +12,6 @@ let queryResult = await
         },
     },
 });
-console.log('query result', queryResult);
 ```
 
-Now let's find some information about the data you just wrote:
+Through querying we can find some information about the data you just wrote:
