--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,4 +1,6 @@
-## 8. Deleting messages in your DWN
+## 8. Deleting messages from your DWN
+
+What we can store, we can remove.
 
 ```js
 let deleteResult = await web5.dwn.records.delete(did.id, {
@@ -7,10 +9,4 @@ message: {
 recordId: queryResult.entries[0].recordId,
 },
 });
-console.log('delete result', deleteResult);
 ```
-Next Steps:
-
-1. Learn more about DIDs (link to DID page)
-2. Build your first ToDo app (link coming soon)
-3. Learn what to do with a DID externally(linked in build>DID>how-to-use-externa..)
