first few quickstart edits, take a look

--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -1,14 +1,13 @@
-Next Steps:
-
-1. Learn more about DIDs (link to DID page)
-2. Build your first ToDo app (link coming soon)
-3. Learn what to do with a DID externally(linked in build>DID>how-to-use-externa..)
+# Next Steps:
 
 :::info
-
 The source code for the interactive parts of this Quickstart is available 
 [here](https://github.com/TBD54566975/web5-quickstart-widgets/blob/main/index.html) as a
 single HTML file. You may run the examples here, open the file directly in your 
 browser, or see it deployed [here](https://moonlit-centaur-0d7b4f.netlify.app/).
 
 :::
+
+### 1. Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers.md)
+### 2. Build your first [ToDo app](docs/web5/build/apps/todo-app-tutorial.mdx)
+### 3. Learn what to do with a [DID externally](docs/web5/build/decentralized-identifiers/how-to-use-external-dids.mdx)
