--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -3,12 +3,9 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 ## 1. Installation
-
-:::info Web5 Installation
-
 <Tabs>
   <TabItem value="NPM" label="via NPM">
-  
+    <h3>Web5 Installation</h3>
     <h4>Prerequisites</h4>
     <p><a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" 
       target="_blank">Node Package Manager - NPM</a></p>
@@ -19,7 +16,7 @@ import TabItem from '@theme/TabItem';
 
   </TabItem>
   <TabItem value="CDN" label="from CDN">
-  
+    <h3>Web5 Installation</h3>
     <div>
       <p>You may also reference the Web5 JS SDK library directly 
       from the CDN. This may be preferable for projects not using a package 
@@ -31,13 +28,9 @@ import TabItem from '@theme/TabItem';
   </TabItem>
 </Tabs>
 
-:::
-
 ## 2. Import `Web5`
 
 You'll need to import the `Web5` class for your JavaScript application to reference it. 
-
-:::info Import the Web5 Class
 
 <Tabs>
   <TabItem value="NPM" label="via NPM">
@@ -59,8 +52,6 @@ You'll need to import the `Web5` class for your JavaScript application to refere
 
   </TabItem>
 </Tabs>
-
-:::
 
 import { Web5 } from '@tbd54566975/web5'
 <div>
