links and images

--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -1,4 +1,4 @@
-### 5. Write to Decentralized Web Node
+## 5. Write to Decentralized Web Node
 
 Now you’re able to write / store your data in a Decentralized Web Node (DWN):
 
