--- a/docs/web5/quickstart.mdx
+++ b/docs/web5/quickstart.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: Quickstart
 hide_title: true
-hide_table_of_contents: true
+hide_table_of_contents: false
 ---
 
 import Web5Quickstart from './quickstart'
