--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -12,7 +12,7 @@ import TabItem from '@theme/TabItem';
     <p>Ensure you have the Node Package Manager, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
     <h4>Installation</h4>
     <p>The following command will install the Web5 module into your project using NPM. From the shell:</p>
-    <pre>$> npm install @tbd54566975/web5</pre>
+    <pre>$> npm install @tbd54566975/web5@0.4.0</pre>
 
   </TabItem>
   <TabItem value="CDN" label="from CDN">
@@ -48,14 +48,7 @@ You'll need to import the `Web5` class for your JavaScript application to refere
       <p>If you're not using a package manager like NPM, import the class in JavaScript from the CDN:</p>
     </div>
 
-    import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/browser.min.js'
+    import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0/dist/browser.mjs';
 
   </TabItem>
 </Tabs>
-
-import { Web5 } from '@tbd54566975/web5'
-<div>
-    <h4>Import</h4>
-    <p>Then, in JavaScript:</p>
-    import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1/dist/browser.min.js'
-</div>
