Updated quickstart with better perspective

--- a/docs/web5/_quickstart-01-intro.mdx
+++ b/docs/web5/_quickstart-01-intro.mdx
@@ -2,6 +2,6 @@
 
 We’re going to build a decentralized application on the Web5 platform - in under 5 minutes.
 
-We’ll show you how to use features like messaging, reading, and writing to your personal data store.
+We’ll show you how to read, write, and delete from your users' your personal data stores.
 
 Let’s go! 🚀
