--- a/docs/web5/_quickstart-05-write-record.mdx
+++ b/docs/web5/_quickstart-05-write-record.mdx
@@ -1,8 +1,12 @@
 ## 5. Write to Decentralized Web Node
 
-Now you’re able to write / store your data in a Decentralized Web Node (DWN):
+Now you’re able to write / store your app's data in the user's Decentralized Web Node (DWN).
 
-The DWN is your personal data store - a home for messages, pictures, videos, and more. It’s how you retain ownership over your information. Later on you’ll have the opportunity to replicate it for redundancy. It can be hosted by others, but because the private information in your DWN is encrypted with your key - you’re in charge, and all your information is secure.
+The user's DWN is their personal data store - a platform for messages, pictures, videos, medical records, and just about any content. Your app does not need to store the user's data - it should be stored in their DWN. This is how the user retains ownership over their content. 
+
+Through permissions, users can decide which apps can read, write, and delete content from their DWN. In the near future, users will have the opportunity to replicate their DWN across their devices.
+
+A user can host their DWN in mulitple locations. The Web5 JS library is both browser and Node.js compliant, meaning you can use the same APIs on both client side and serverside. 
 
 ```js
 const data = 'Hello Web5';
