--- a/docs/web5/_quickstart-08-delete-record.mdx
+++ b/docs/web5/_quickstart-08-delete-record.mdx
@@ -1,6 +1,6 @@
 ## 8. Deleting messages from your DWN
 
-What we can store, we can remove.
+Data can be deleted from DWNs if you have permission to do so. Similar to reading, we're using the `recordId` to remove the record.
 
 ```js
 let deleteResult = await web5.dwn.records.delete(did.id, {
