--- a/docs/web5/_quickstart-09-next-steps.mdx
+++ b/docs/web5/_quickstart-09-next-steps.mdx
@@ -8,6 +8,6 @@ browser, or see it deployed [here](https://moonlit-centaur-0d7b4f.netlify.app/).
 
 :::
 
-### 1. Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers.md)
-### 2. Build your first [ToDo app](docs/web5/build/apps/todo-app-tutorial.mdx)
-### 3. Learn what to do with a [DID externally](docs/web5/build/decentralized-identifiers/how-to-use-external-dids.mdx)
+### 1. Learn more about [DIDs](/docs/web5/learn/decentralized-identifiers)
+### 2. Learn more about [DWNs](/docs/web5/learn/decentralized-web-nodes)
+### 3. Build a decentralized [ToDo app](/docs/web5/build/apps/todo-app-tutorial)
