--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -1,7 +1,6 @@
-## 4. Register your DID:
+## 4. Register your DID
 
-Registering your DID gives others a way to find you, message you, and send you data (provided they have permissions).
-
+Registering a user's DID gives other apps (or users) a way to find them, message them, and send them data provided they have permissions.
 ```js
 await web5.did.register({
     connected: true,
@@ -11,4 +10,4 @@ await web5.did.register({
 });
 ```
 
-Register your DID from step one here:
+Register the DID:
