--- a/docs/web5/_quickstart-07-read-record.mdx
+++ b/docs/web5/_quickstart-07-read-record.mdx
@@ -1,7 +1,6 @@
 ## 7. Reading messages in your DWN
 
-We put the data in; let's get it out. All of this is from your 
-personal datastore, your DWN, running embedded in your application.
+If the user has given your app read permissions to their DWN, you can read specific records using a `recordId`. In the code snippet below, we are using the `queryResult` from Step 6 to obtain the `recordId`. 
 
 ```js
 let readResult = await web5.dwn.records.read(did.id, {
