[DO NOT MERGE] Phase 2 (#365)
* adjust spacing on sidebar

* styling adjustments

* remove margin top

* added hero card

* responsive adjustments, new API ref layout

* added tier 3 component and started community section

* Add separation border in sidebar

* Set up community component

* making progress on community component

* add learning content and fix tailwind bug

* remove docs/intro

* Update web5 intro page (#364)

* Adding all the content

* update home to say "Getting Started"

* Update styles to docs site

* Organizing sidebar

* First iteration of Web5 QuickStart into dev site repo

* add todo app

* Updated styling to hero cards

* fixed caterogy files

* First iteration of Web5 QuickStart into dev site repo (#368)

* Pare Web5 Intro buttons down to quickstart and contribute (#369)

* Fix quickstart link (#370)

* restoring web5 project page to its original state

* fixing page to not reuse web5 project page

* fix sidebar order

* rename quickstart

* added language to code snippets

* swap learn and build positioning

* converting VC Issuance tutorial to a blog post

* converting VC Issuance tutorial into blog post

* update meta tags in web5 index

* First stan at putting markdown from quickstart into partials

* updating todo tutorial

* add widget to quickstart

* doc index page

* fixing thumbnail width

* cleaning up spacing, styling and steps

* fixing icon size

* fix css

* add web5 library and address "readonly" attributes

* upgraded react, remove locale, switch from dynamic import

* adjusted sidebar

* put arrows to the right, adjusted spacing

* slightly adjusted spacing

* use latest version of web5-js

* updating styling on Docs intro page

* style adjustments

* adjust caret

* styling fixes for docs intro page

* fixed spacing on docs intro page

* removed shadow from code image and narrowed spacing

* small changes to tutorial

--- a/docs/api/index.mdx
+++ b/docs/api/index.mdx
@@ -1,24 +1,26 @@
 ---
-sidebar_position: 2
-title: 'APIs'
+title: 'API Reference'
 ---
 
 import ApiCard from '@site/src/components/ApiCard';
 
-<div className="grid grid-cols-2 gap-4">
-  <ApiCard
-    url="/docs/apis/ssi-service"
-    name="SSI Service API"
-    description="The Self Sovereign Identity Service (SSIS) facilitates all things relating to DIDs and Verifiable Credentials "
-  />
-  <ApiCard
-    url="https://tbd54566975.github.io/dwn-sdk-js/"
-    name="DWN JavaScript SDK"
-    description="A decentralized personal and application data storage and message relay node, as defined in the DIF Decentralized Web Node specification. Users may have multiple Nodes that replicate their data between them."
-  />
-  <ApiCard
-    url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk"
-    name="SSI SDK - Go Docs"
-    description=" The ssi-sdk intends to provide flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
-  />
+<div>
+  <p>The Web5 API References provide access to the Web5 JS SDK, DWN JS SDK, the SSI SDK, and SSI Service API.</p>
+  <div className="grid grid-cols-2 gap-4">
+    <ApiCard
+      url="/docs/apis/ssi-service"
+      name="SSI Service API"
+      description="The Self Sovereign Identity Service (SSIS) facilitates all things relating to DIDs and Verifiable Credentials "
+    />
+    <ApiCard
+      url="https://tbd54566975.github.io/dwn-sdk-js/"
+      name="DWN JavaScript SDK"
+      description="A decentralized personal and application data storage and message relay node, as defined in the DIF Decentralized Web Node specification. Users may have multiple Nodes that replicate their data between them."
+    />
+    <ApiCard
+      url="https://pkg.go.dev/github.com/TBD54566975/ssi-sdk"
+      name="SSI SDK - Go Docs"
+      description=" The ssi-sdk intends to provide flexible functionality based on a set of standards-based primitives for building decentralized identity applications in a modular manner: with limited dependencies between components."
+    />
+  </div>
 </div>
