--- a/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -2,31 +2,59 @@ import Link from '@docusaurus/Link';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## 1. Installation
-<Tabs>
-  <TabItem value="NPM" label="via NPM">
-    <h3>Web5 Installation</h3>
-    <h4>Prerequisites</h4>
-    <p><a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" 
-      target="_blank">Node Package Manager - NPM</a></p>
-    <p>Ensure you have the Node Package Manager, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
-    <h4>Installation</h4>
-    <p>The following command will install the Web5 module into your project using NPM. From the shell:</p>
-    <pre>$> npm install @tbd54566975/web5@0.4.0</pre>
+:::note
+<h3>Prerequisites</h3>
+<p><a href="https://docs.npmjs.com/downloading-and-installing-node-js-and-npm" 
+  target="_blank">Node Package Manager - NPM</a></p>
+<p>Ensure you have the Node Package Manager, <code>npm</code>, installed and on your system's <code>$PATH</code>.</p>
+:::
 
-  </TabItem>
-  <TabItem value="CDN" label="from CDN">
-    <h3>Web5 Installation</h3>
-    <div>
-      <p>You may also reference the Web5 JS SDK library directly 
-      from the CDN. This may be preferable for projects not using a package 
-      management system like NPM.</p>
-      <p>In this case, no prior installation on your system or in your project is 
-      necessary, and we'll simply import the Web5
-      class in the next step.</p>
-    </div>
-  </TabItem>
-</Tabs>
+<h2>Installation</h2>
+
+Commands below will be done in your terminal.
+
+<h4>1. Create Directory:</h4>
+<p>This will be the home of your new Web5 app.</p>
+<pre>mkdir web5-app</pre>
+<pre>cd web5-app</pre>
+
+<h4>2. Install Web5:</h4>
+
+<p>We'll be using the NPM package manager. Run <code>npm</code> to install Web5:</p>
+
+<pre>npm install @tbd54566975/web5@0.4.0</pre>
+
+:::info
+After npm resolves the dependency you may see a few warnings which you can ignore for now. 
+:::
+
+This will add Web5 as a dependency of the project, which you should now see in <code>package.json</code>. It will also resovle its transitive dependencies in a file called <code>package-lock.json</code> and place those dependencies in a folder called <code>node_modules</code>.
+
+To verify everything is working, open <code>package.json</code> or run in Mac/Linux systems:
+<pre>cat package.json</pre>
+
+This should look like:
+```json
+{
+  "dependencies": {
+    "@tbd54566975/web5": "^0.4.0"
+  }
+}
+```
+<h1>NOT STARTED EDITING BELOW THIS LINE</h1>
+
+<h4>3. Import Dependencies into app</h4>
+    <pre>mkdir src</pre>
+
+    <pre>cd src</pre>
+
+    `touch index.js`
+
+    Open `web5-app/index.js` in your editor
+
+    Paste at the top of index.js:
+     `import { Web5 } from '@tbd54566975/web5'`
+
 
 ## 2. Import `Web5`
 
