Issue #398 Do Not Edit, Goodnight

--- a/docs/web5/_quickstart-04-register-did.mdx
+++ b/docs/web5/_quickstart-04-register-did.mdx
@@ -1,3 +1,5 @@
+## HAVE NOT EDITED BELOW THIS LINE
+
 ## 4. Register your DID
 
 Registering a user's DID gives other apps (or users) a way to find them, message them, and send them data provided they have permissions.
