Issue #398 Register DID, Blocked and will come back to

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -1,6 +1,6 @@
 # Start Building
 
-## How to create and include Web5 App instance in your app:
+## Create Web5 App instance:
 
 There’s only one class needed for all operations, it creates an isolated API object for doing all Web5 things.
 
@@ -14,7 +14,7 @@ Web5 is split into three main top-level objects:
 - web5.did
 - web5.vc
 
-Let’s first focus on the `web5.did` namespace to continue building our app
+Let’s first focus on the `web5.did` namespace to continue building our app.
 
 ## Step One, Create DID, `web5.did`:
 
