Issue #398 DWN, Blocked output will come back to

--- a/docs/web5/_quickstart-03-create-did.mdx
+++ b/docs/web5/_quickstart-03-create-did.mdx
@@ -16,7 +16,7 @@ Web5 is split into three main top-level objects:
 
 Let’s first focus on the `web5.did` namespace to continue building our app.
 
-## Step One, Create DID, `web5.did`:
+## 1. Create DID, `web5.did`:
 
 :::info
 A [Decentralized Identifier (DID)](https://www.w3.org/TR/did-core/),
